--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <!-- <include src="./partials/example.html"></include> -->
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Page title</title>
+  <link rel="stylesheet" href="./sass/index.scss" />
+  <script type="module" src="./index.js"></script>
+</head>
+
+<body>
+  <form class="search-form" id="search-form">
+    <input class="form-input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+    <button class="form-button" type="submit">Search
+      <svg class="form-icon" width="14" height="14" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M26.8988 26.8159C27.1917 27.1088 27.6666 27.1088 27.9595 26.8159C28.2524 26.523 28.2524 26.0481 27.9595 25.7552L26.8988 26.8159ZM22.7118 20.5076C22.4189 20.2147 21.9441 20.2147 21.6512 20.5076C21.3583 20.8005 21.3583 21.2754 21.6512 21.5683L22.7118 20.5076ZM24.2664 14.2221C24.2664 19.1379 20.2814 23.1229 15.3656 23.1229V24.6229C21.1098 24.6229 25.7664 19.9663 25.7664 14.2221H24.2664ZM15.3656 23.1229C10.4499 23.1229 6.46484 19.1379 6.46484 14.2221H4.96484C4.96484 19.9663 9.62144 24.6229 15.3656 24.6229V23.1229ZM6.46484 14.2221C6.46484 9.30631 10.4499 5.32129 15.3656 5.32129V3.82129C9.62144 3.82129 4.96484 8.47788 4.96484 14.2221H6.46484ZM15.3656 5.32129C20.2814 5.32129 24.2664 9.30631 24.2664 14.2221H25.7664C25.7664 8.47788 21.1098 3.82129 15.3656 3.82129V5.32129ZM27.9595 25.7552L22.7118 20.5076L21.6512 21.5683L26.8988 26.8159L27.9595 25.7552Z" fill="#BABABA"/>
+        </svg>
+    </button>
+  </form>
+
+  <div class="gallery">
+    <!-- Карточки изображений -->
+  </div>
+
+  <button class="form-button form-button--dark" type="button" class="load-more">Load more</button>
+</body>
+
 </html>
