infinity scroll done

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,12 @@
     <!-- Карточки изображений -->
   </div>
 
+  <div class="loading">
+    <div class="ball"></div>
+    <div class="ball"></div>
+    <div class="ball"></div>
+  </div>
+  
   <button class="js-load-more form-button form-button--light-mode load-more-button is-hidden" type="button">Load
     more</button>
 </body>
