--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,9 @@
   </div>
 
   <div class="loading">
-    <div class="ball"></div>
-    <div class="ball"></div>
-    <div class="ball"></div>
+    <div class="loading__ball"></div>
+    <div class="loading__ball"></div>
+    <div class="loading__ball"></div>
   </div>
   
   <button class="js-load-more form-button form-button--light-mode load-more-button is-hidden" type="button">Load
