--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,8 @@
     <div class="loading__ball"></div>
   </div>
   
-  <button class="js-load-more form-button form-button--light-mode load-more-button is-hidden" type="button">Load
-    more</button>
+  <button class="js-load-more form-button form-button--light-mode load-more-button is-hidden" type="button">
+    Load more</button>
   
   <a class="link button--up" href="#search-form">
     <svg class="icon-arrow" width="7" height="20" viewBox="0 0 12 33" xmlns="http://www.w3.org/2000/svg">
